[package]
name = "bluebird"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.34.0", features = ["yaml"] }
colored = "2.0.0"
dotenv = "0.15.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
